clusters/personal/default/cloudflare-ddns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-ddns
  namespace: default
spec:
  selector:
    matchLabels:
      app: cloudflare-ddns
  template:
    metadata:
      labels:
        app: cloudflare-ddns
    spec:
      containers:
      - name: cloudflare-ddns
        image: favonia/cloudflare-ddns:1.16.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "32Mi"
            cpu: "50m"
