clusters/personal/default/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-tunnel
  namespace: default
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      imagePullSecrets:
        - name: cappyt
      containers:
      - name: cf-tunnel
        image: git.cappyt.sh/cappyt/cloudflared:latest
        imagePullPolicy: IfNotPresent
        args:
          - "tunnel"
          - "--protocol"
          - "http2"
          - "--loglevel"
          - "debug"
          - "run"
        resources:
          limits:
            memory: "30Mi"
            cpu: "50m"
