clusters/personal/default/gittozipbot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gittozipbot
  namespace: default
  labels:
    app: gittozipbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gittozipbot
  template:
    metadata:
      labels:
        app: gittozipbot
    spec:
      imagePullSecrets:
        - name: cappyt
      containers:
      - name: gittozipbot
        image: git.cappyt.sh/cappyt/gittozipbot:v1.0.1
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: "/scratch"
          name: scratch-volume
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
            ephemeral-storage: "500Mi"
          limits:
            memory: "512Mi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65532
      volumes:
      - name: scratch-volume
        emptyDir:
          sizeLimit: 1Gi
