clusters/personal/default/certwarden.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: certwarden
  namespace: default
spec:
  selector:
    matchLabels:
      app: certwarden
  serviceName: certwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: certwarden
    spec:
      containers:
      - name: certwarden
        image: ghcr.io/gregtwallace/certwarden:v0.25.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 30Mi
          limits:
            cpu: 200m
            memory: 70Mi
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-legoch-0
---
apiVersion: v1
kind: Service
metadata:
  name: certwarden
  namespace: default
  annotations:
    metallb.universe.tf/address-pool: private-pool
spec:
  type: LoadBalancer
  selector:
    app: certwarden
  ports:
  - port: 80
    targetPort: http
    name: http
  - port: 443
    targetPort: https
    name: https
