clusters/personal/default/findmy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: findmy
  namespace: default
spec:
  replicas: 1
  serviceName: findmy
  selector:
    matchLabels:
      app: findmy
  template:
    metadata:
      labels:
        app: findmy
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch
        fsGroup: 1000
      volumes:
        - name: config
          secret:
            secretName: findmy-config
        - name: anisette
          persistentVolumeClaim:
            claimName: anisette-findmy
        - name: mh
          persistentVolumeClaim:
            claimName: mh-findmy
      containers:
        - name: macless-haystack
          image: christld/macless-haystack:v2.7.2
          ports:
            - name: endpoint
              containerPort: 6176
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 70Mi
          volumeMounts:
            - name: mh
              mountPath: /app/endpoint/data
            - name: config
              mountPath: /app/endpoint/data/config.ini
              subPath: config.ini
        - name: anisette
          image: dadoum/anisette-v3-server
          ports:
            - name: anisette
              containerPort: 6969
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 70Mi
          volumeMounts:
            - name: anisette
              mountPath: /root/.config/anisette-v3/
          securityContext:
            runAsUser: 0
            runAsGroup: 0
---
apiVersion: v1
kind: Service
metadata:
  name: findmy-service
  namespace: default
  annotations:
    metallb.universe.tf/address-pool: private-pool
spec:
  ports:
    - protocol: TCP
      port: 6176
      targetPort: endpoint
  selector:
    app: findmy
  type: LoadBalancer
