clusters/personal/default/minecraft-atm10.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: minecraft
    modpack: atm10
  name: atm10-server
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: minecraft
      modpack: atm10
  serviceName: atm10
  template:
    metadata:
      labels:
        app: minecraft
        modpack: atm10
    spec:
      volumes:
        - name: minecraft-data-atm10
          persistentVolumeClaim:
            claimName: minecraft-data-atm10-atm10-server
      containers:
      - env:
        - name: TYPE
          value: AUTO_CURSEFORGE
        - name: EULA
          value: 'true'
        - name: CF_API_KEY
          valueFrom:
            secretKeyRef:
              key: token
              name: minecraft-cf-api
        - name: CF_SLUG
          value: all-the-mods-10
        - name: CF_FORCE_SYNCHRONIZE
          value: 'true'
        - name: INIT_MEMORY
          value: 6G
        - name: MAX_MEMORY
          value: 6G
        - name: MOTD
          value: The adventures of the mighty Juje!
        - name: SNOOPER
          value: "false"
        - name: PVP
          value: "false"
        - name: ENABLE_WHITELIST
          value: "true"
        - name: WHITELIST
          value: CappyT,GodMother95
        - name: RCON_PASSWORD
          valueFrom:
            secretKeyRef:
              key: rcon-pass
              name: minecraft-rcon
        - name: JVM_OPTS
          value: -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+AlwaysActAsServerClassMachine
            -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:AllocatePrefetchStyle=3
            -XX:NmethodSweepActivity=1 -XX:ReservedCodeCacheSize=400M -XX:NonNMethodCodeHeapSize=12M
            -XX:ProfiledCodeHeapSize=194M -XX:NonProfiledCodeHeapSize=194M -XX:-DontCompileHugeMethods
            -XX:+PerfDisableSharedMem -XX:+UseFastUnorderedTimeStamps -XX:+UseCriticalJavaThreadPriority
            -XX:+EagerJVMCI -Dgraal.TuneInlinerExploration=1 -XX:+UseG1GC -XX:MaxGCPauseMillis=130
            -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch
            -XX:G1NewSizePercent=28 -XX:G1HeapRegionSize=16M -XX:G1ReservePercent=20
            -XX:G1MixedGCCountTarget=3 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1MixedGCLiveThresholdPercent=90
            -XX:G1RSetUpdatingPauseTimePercent=0 -XX:SurvivorRatio=32 -XX:MaxTenuringThreshold=1
            -XX:G1SATBBufferEnqueueingThresholdPercent=30 -XX:G1ConcMarkStepDurationMillis=5
            -XX:G1ConcRefinementServiceIntervalMillis=150 -XX:G1ConcRSHotCardLimit=16
        image: itzg/minecraft-server:java21-graalvm
        imagePullPolicy: IfNotPresent
        name: server
        ports:
        - containerPort: 25565
          name: minecraft
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 25565
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "5"
            memory: 8Gi
          requests:
            cpu: "4"
            memory: 6Gi
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /data
          name: minecraft-data-atm10
      - env:
        - name: RWA_USERNAME
          value: CappyT
        - name: RWA_PASSWORD
          valueFrom:
            secretKeyRef:
              key: rcon-pass
              name: minecraft-rcon
        - name: RWA_RCON_PASSWORD
          valueFrom:
            secretKeyRef:
              key: rcon-pass
              name: minecraft-rcon
        image: itzg/rcon:latest
        imagePullPolicy: IfNotPresent
        name: rcon
        ports:
        - containerPort: 4326
          name: rcon
          protocol: TCP
        - containerPort: 4327
          name: rcon-ws
          protocol: TCP
  updateStrategy:
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: private-pool
  labels:
    app: minecraft
    modpack: atm10
  name: atm10
  namespace: default
spec:
  ports:
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: minecraft
  - name: rcon
    port: 4326
    protocol: TCP
    targetPort: rcon
  - name: rcon-ws
    port: 4327
    protocol: TCP
    targetPort: rcon-ws
  selector:
    app: minecraft
    modpack: atm10
  type: LoadBalancer
