clusters/personal/default/minecraft-bachelor.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bachelor-server
  namespace: default
  labels:
    app: minecraft
    modpack: bachelor
spec:
  updateStrategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft
      modpack: bachelor
  template:
    metadata:
      labels:
        app: minecraft
        modpack: bachelor
    spec:
      volumes:
        - name: minecraft-data-bachelor
          persistentVolumeClaim:
            claimName: minecraft-data-bachelor-server
      containers:
        - name: server
          image: itzg/minecraft-server:java21
          ports:
            - name: minecraft
              containerPort: 25565
              protocol: TCP
          resources:
            limits:
              cpu: '5'
              memory: 8Gi
            requests:
              cpu: '4'
              memory: 6Gi
          volumeMounts:
            - name: minecraft-data-bachelor
              mountPath: /data
          readinessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          stdin: true
          tty: true
  serviceName: bachelor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minecraft
    modpack: bachelor
  name: bachelor
  namespace: default
spec:
  ports:
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: minecraft
  - name: rcon
    port: 4326
    protocol: TCP
    targetPort: rcon
  - name: rcon-ws
    port: 4327
    protocol: TCP
    targetPort: rcon-ws
  selector:
    app: minecraft
    modpack: bachelor
  type: LoadBalancer
