clusters/personal/default/minecraft-bettermc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: better-mc-server
  namespace: default
  labels:
    app: minecraft
    modpack: bettermc
spec:
  selector:
    matchLabels:
      app: minecraft
      modpack: bettermc
  template:
    metadata:
      labels:
        app: minecraft
        modpack: bettermc
    spec:
      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            claimName: minecraft-data-better-mc-server
      containers:
        - name: server
          image: itzg/minecraft-server:java17-graalvm
          ports:
            - name: minecraft
              containerPort: 25565
              protocol: TCP
          resources:
            limits:
              cpu: '5'
              memory: 8Gi
            requests:
              cpu: '4'
              memory: 6Gi
          volumeMounts:
            - name: minecraft-data
              mountPath: /data
          readinessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          stdin: true
          tty: true
        - name: rcon
          image: itzg/rcon:latest
          ports:
            - name: rcon
              containerPort: 4326
              protocol: TCP
            - name: rcon-ws
              containerPort: 4327
              protocol: TCP
  serviceName: bettermc
  updateStrategy:
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: private-pool
  labels:
    app: minecraft
    modpack: bettermc
  name: bettermc
  namespace: default
spec:
  ports:
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: minecraft
  - name: rcon
    port: 4326
    protocol: TCP
    targetPort: rcon
  - name: rcon-ws
    port: 4327
    protocol: TCP
    targetPort: rcon-ws
  selector:
    app: minecraft
    modpack: bettermc
  type: LoadBalancer
