clusters/personal/default/minecraft-oceanblock2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oceanblock2-server
  namespace: default
  labels:
    app: minecraft
    modpack: oceanblock2
spec:
  selector:
    matchLabels:
      app: minecraft
      modpack: oceanblock2
  template:
    metadata:
      labels:
        app: minecraft
        modpack: oceanblock2
    spec:
      volumes:
        - name: minecraft-data-oceanblock2
          persistentVolumeClaim:
            claimName: minecraft-data-oceanblock2-oceanblock2-server
      containers:
        - name: server
          image: itzg/minecraft-server:java21-graalvm
          ports:
            - name: minecraft
              containerPort: 25565
              protocol: TCP
          resources:
            limits:
              cpu: '5'
              memory: 8Gi
            requests:
              cpu: '4'
              memory: 6Gi
          volumeMounts:
            - name: minecraft-data-oceanblock2
              mountPath: /data
          readinessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          stdin: true
          tty: true
        - name: rcon
          image: itzg/rcon:latest
          ports:
            - name: rcon
              containerPort: 4326
              protocol: TCP
            - name: rcon-ws
              containerPort: 4327
              protocol: TCP
  serviceName: oceanblock2
  updateStrategy:
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: private-pool
  labels:
    app: minecraft
    modpack: oceanblock2
  name: oceanblock2
  namespace: default
spec:
  ports:
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: minecraft
  - name: rcon
    port: 4326
    protocol: TCP
    targetPort: rcon
  - name: rcon-ws
    port: 4327
    protocol: TCP
    targetPort: rcon-ws
  selector:
    app: minecraft
    modpack: oceanblock2
  type: LoadBalancer
