clusters/personal/default/nocodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nocodb
  namespace: default
spec:
  selector:
    matchLabels:
      app: nocodb
  serviceName: nocodb
  replicas: 1
  template:
    metadata:
      labels:
        app: nocodb
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-nocodb
      containers:
      - name: nocodb
        image: nocodb/nocodb:0.301.5
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: data
          mountPath: /usr/app/data
---
apiVersion: v1
kind: Service
metadata:
  name: nocodb
  namespace: default
spec:
  selector:
    app: nocodb
  ports:
  - port: 8080
    targetPort: web
