clusters/personal/default/paperless.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1500Mi
            requests:
              cpu: '1'
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: data
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: data
              mountPath: /usr/src/paperless/export
              subPath: export
            - name: data
              mountPath: /usr/src/paperless/consume
              subPath: consume
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-paperless
  serviceName: paperless-web
  updateStrategy:
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-web
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: paperless
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika-paperless
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tika-paperless
  template:
    metadata:
      labels:
        app: tika-paperless
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: tika-paperless
        image: apache/tika:3.3.1.0-full
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 9998
---
apiVersion: v1
kind: Service
metadata:
  name: tika-paperless
  namespace: default
spec:
  selector:
    app: tika-paperless
  ports:
  - port: 9998
    targetPort: 9998
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-gotenberg
  template:
    metadata:
      labels:
        app: paperless-gotenberg
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: paperless-gotenberg
        image: docker.io/gotenberg/gotenberg:8.34
        imagePullPolicy: IfNotPresent
        args:
          - "gotenberg"
          - "--chromium-disable-javascript=true"
          - "--chromium-allow-list=file:///tmp/.*"
        resources:
          limits:
            cpu: 350m
            memory: 500Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: default
spec:
  selector:
    app: paperless-gotenberg
  ports:
  - port: 3000
    targetPort: 3000
---
