clusters/personal/default/fmd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmd-server
  namespace: default
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fmd-server
  template:
    metadata:
      labels:
        app: fmd-server
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch
        fsGroup: 1000
      containers:
      - name: fmd-server
        image: registry.gitlab.com/fmd-foss/fmd-server:0.15.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: 128Mi
            cpu: "100m"
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - mountPath: /var/lib/fmd-server/db/
            name: fmd-data
      volumes:
        - name: fmd-data
          persistentVolumeClaim:
            claimName: fmd-data
---
apiVersion: v1
kind: Service
metadata:
  name: fmd-server
  namespace: default
spec:
  selector:
    app: fmd-server
  ports:
  - port: 8080
    targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fmd-server-route
  namespace: default
spec:
  hostnames:
    - fmd.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: fmd-server
      port: 8080
