clusters/personal/default/gitea.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  namespace: default
spec:
  selector:
    matchLabels:
      app: gitea
  serviceName: gitea
  replicas: 1
  template:
    metadata:
      labels:
        app: gitea
    spec:
      securityContext:
        runAsUser: 1000
        fsGroupChangePolicy: OnRootMismatch
        fsGroup: 1000
        runAsNonRoot: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-gitea
      containers:
      - name: gitea
        image: gitea/gitea:1.26.4-rootless
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2222
          name: ssh
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: data
          mountPath: /var/lib/gitea
        - name: data
          mountPath: /etc/gitea
          subPath: gitea/conf
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: default
spec:
  selector:
    app: gitea
  ports:
  - port: 80
    targetPort: http
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: default
  annotations:
    io.cilium/lb-ipam-ips: "185.242.182.145"
    lbipam.cilium.io/sharing-key: "main-ip"
    lbipam.cilium.io/sharing-cross-namespace: "envoy-gateway-system"
  labels:
    type: public
spec:
  type: LoadBalancer
  selector:
    app: gitea
  ports:
  - port: 22
    targetPort: ssh
    name: ssh
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-route
  namespace: default
spec:
  hostnames:
    - git.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: gitea
      port: 80
