clusters/personal/default/immich.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  namespace: default
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: true
      volumes:
      - name: model-cache
        persistentVolumeClaim:
          claimName: immich-model-cache
      containers:
      - name: immich-ml
        image: ghcr.io/immich-app/immich-machine-learning:v3.0.0
        args:
            - python
            - -m
            - immich_ml
            - DEVICE=CPU
        volumeMounts:
          - mountPath: /cache
            name: model-cache
        resources:
          limits:
            memory: "2Gi"
            cpu: "2000m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: default
spec:
  selector:
    app: immich-ml
  ports:
  - port: 3003
    targetPort: 3003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: default
spec:
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: true
      volumes:
      - name: library
        persistentVolumeClaim:
          claimName: nfs-pvc-immich
      - name: dri-device
        hostPath:
          path: /dev/dri
          type: Directory
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:v3.0.0
        ports:
        - name: http
          containerPort: 2283
          protocol: TCP
        - name: metrics-api
          containerPort: 8081
          protocol: TCP
        - name: metrics-ms
          containerPort: 8082
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
          limits:
            cpu: 4000m
            memory: 8Gi
        volumeMounts:
          - name: library
            mountPath: /usr/src/app/upload
          - mountPath: /dev/dri
            name: dri-device
---
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: default
spec:
  selector:
    app: immich
  ports:
  - port: 2283
    targetPort: http
    name: http
  - port: 8081
    targetPort: metrics-api
    name: metrics-api
  - port: 8082
    targetPort: metrics-ms
    name: metrics-ms
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: default
spec:
  hostnames:
    - immich.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: immich
      port: 2283
