clusters/personal/default/jitsi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jitsi-route
  namespace: default
spec:
  hostnames:
    - meet.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: jitsi-jitsi-meet-web
      port: 80
