clusters/personal/default/ladder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladder
  namespace: default
spec:
  selector:
    matchLabels:
      app: ladder
  template:
    metadata:
      labels:
        app: ladder
    spec:
      containers:
      - name: ladder
        image: ghcr.io/everywall/ladder:v0.0.21
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: 128Mi
            cpu: "100m"
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ladder
  namespace: default
spec:
  selector:
    app: ladder
  ports:
  - port: 8080
    targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ladder-route
  namespace: default
spec:
  hostnames:
    - ladder.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: ladder
      port: 8080
