clusters/personal/default/linkwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-meilisearch
  namespace: default
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden-meilisearch
  template:
    metadata:
      labels:
        app: linkwarden-meilisearch
    spec:
      securityContext:
        runAsUser: 1000
        fsGroupChangePolicy: OnRootMismatch
        fsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.12.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7700
              name: http
          volumeMounts:
            - name: data
              mountPath: /meili_data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-linkwarden-meilisearch
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-meilisearch
  namespace: default
spec:
  selector:
    app: linkwarden-meilisearch
  ports:
    - port: 7700
      targetPort: 7700
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      securityContext:
        runAsUser: 1000
        fsGroupChangePolicy: OnRootMismatch
        fsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.14.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data/data
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-linkwarden
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: default
spec:
  selector:
    app: linkwarden
  ports:
    - port: 3000
      targetPort: 3000
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden-route
  namespace: default
spec:
  hostnames:
    - bookmarks.cappyt.sh
  parentRefs:
    - name: public-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - name: linkwarden
          port: 3000
