clusters/personal/default/next-tools.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-tools
  namespace: default
spec:
  selector:
    matchLabels:
      app: next-tools
  template:
    metadata:
      labels:
        app: next-tools
    spec:
      containers:
      - name: next-tools
        image: ghcr.io/willjayyyy/next-tools:1.10.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: next-tools
  namespace: default
spec:
  selector:
    app: next-tools
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: next-tools-route
  namespace: default
spec:
  hostnames:
    - tools.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: next-tools
      port: 8080
