clusters/personal/default/ntfy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-deployment
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: ntfy 
          image: binwiederhier/ntfy:v2.23.0
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          args: ["serve"]
          ports: 
            - containerPort: 8080
              name: http-ntfy
          resources:
            limits:
              memory: 300Mi
              cpu: 500m
            requests:
              cpu: 100m
              memory: 150Mi
          volumeMounts:
              - mountPath: /var/lib/ntfy
                name: cache-volume
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ntfy-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: default
spec:
  selector:
    app: ntfy
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy-route
  namespace: default
spec:
  hostnames:
    - ntfy.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: ntfy
      port: 8080
