clusters/personal/default/outline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: default
spec:
  selector:
    matchLabels:
      app: outline
  template:        
    metadata:
      labels:
        app: outline
    spec:
      volumes:
        - name: outline-data
          persistentVolumeClaim:
            claimName: data-outline
      containers:
      - name: outline
        image: outlinewiki/outline:1.0.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: 128Mi
            cpu: "100m"
        volumeMounts:
          - mountPath: /var/lib/outline/data
            name: outline-data
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: default
spec:
  selector:
    app: outline
  ports:
  - port: 8080
    targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline-route
  namespace: default
spec:
  hostnames:
    - wiki.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: outline
      port: 8080
