clusters/personal/default/termix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termix-deployment
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: termix
  template:
    metadata:
      labels:
        app: termix
    spec:
      terminationGracePeriodSeconds: 15
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: termix 
          image: ghcr.io/lukegus/termix:release-2.4.1
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports: 
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 300Mi
              cpu: 500m
            requests:
              cpu: 100m
              memory: 150Mi
          volumeMounts:
              - mountPath: /app/data
                name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: termix-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: termix
  namespace: default
spec:
  selector:
    app: termix
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: termix-route
  namespace: default
spec:
  hostnames:
    - ssh.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: termix
      port: 8080
