clusters/personal/default/webtop.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webtop-svc
  namespace: default
spec:
  ports:
  - port: 3050
    targetPort: 3050
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: webtop-svc
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.5.68
    ports:
      - port: 3050
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webtop-httproute
  namespace: default
spec:
  hostnames:
    - mcfratm.cappyt.sh
  parentRefs:
  - name: public-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: webtop-svc
      port: 3050
